--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "html-webpack-plugin": "^2.26.0",
     "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.4.0",
-    "pug": "^2.0.0-beta3",
+    "pug": "^2.0.0-rc.4",
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
     "rimraf": "^2.6.0",
